Interpreter/Grammar/SimpleCParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 Grammar\\SimpleC.g 2015-10-11 22:15:08

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


#pragma warning disable 3021


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  SimpleC.Grammar 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
public partial class SimpleCParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADD", "ASSIGN", "BIT_AND", "BIT_NOT", "BIT_OR", "BIT_XOR", "BOOL_AND", "BOOL_NOT", "BOOL_OR", "CHAR", "CHARACTER_LITERAL", "Char", "DEC_POST", "DEC_PRE", "DEREF", "DIV", "DO", "ELSE", "EQUAL", "EXPRESSION", "FALSE", "FOR", "FUNC_BODY", "FUNC_CALL", "FUNC_DECL", "FUNC_DEF", "GREATER", "GREATER_OR_EQUAL", "IDENT", "IF", "INCLUDE", "INCLUDE_STRING", "INC_POST", "INC_PRE", "INTEGER", "Identifier", "Int", "Integer", "LESS", "LESS_OR_EQUAL", "LINE_COMMENT", "ML_COMMENT", "MOD", "MUL", "NOT_EQUAL", "PARAM_LIST", "PARAM_SPEC_LIST", "PROGRAM", "REF", "RETURN", "SHIFT_LEFT", "SHIFT_RIGHT", "SIZEOF_EXPR", "SIZEOF_TYPE", "STATEMENT", "STRING", "STRING_LITERAL", "STRUCT_DEREF", "STRUCT_MEMBER", "SUB", "SUBSCRIPT", "SizeOf", "String", "TRUE", "TYPECAST", "TYPE_SPEC", "U_MINUS", "U_PLUS", "VAR_CALL", "VAR_DECL", "VAR_DEF", "VAR_SPEC", "VOID", "Void", "WHILE", "Whitespace", "'!'", "'#include'", "'('", "')'", "'++'", "','", "'--'", "'->'", "'.'", "';'", "'['", "']'", "'{'", "'}'", "'~'"
	};
	public const int EOF=-1;
	public const int T__80=80;
	public const int T__81=81;
	public const int T__82=82;
	public const int T__83=83;
	public const int T__84=84;
	public const int T__85=85;
	public const int T__86=86;
	public const int T__87=87;
	public const int T__88=88;
	public const int T__89=89;
	public const int T__90=90;
	public const int T__91=91;
	public const int T__92=92;
	public const int T__93=93;
	public const int T__94=94;
	public const int ADD=4;
	public const int ASSIGN=5;
	public const int BIT_AND=6;
	public const int BIT_NOT=7;
	public const int BIT_OR=8;
	public const int BIT_XOR=9;
	public const int BOOL_AND=10;
	public const int BOOL_NOT=11;
	public const int BOOL_OR=12;
	public const int CHAR=13;
	public const int CHARACTER_LITERAL=14;
	public const int Char=15;
	public const int DEC_POST=16;
	public const int DEC_PRE=17;
	public const int DEREF=18;
	public const int DIV=19;
	public const int DO=20;
	public const int ELSE=21;
	public const int EQUAL=22;
	public const int EXPRESSION=23;
	public const int FALSE=24;
	public const int FOR=25;
	public const int FUNC_BODY=26;
	public const int FUNC_CALL=27;
	public const int FUNC_DECL=28;
	public const int FUNC_DEF=29;
	public const int GREATER=30;
	public const int GREATER_OR_EQUAL=31;
	public const int IDENT=32;
	public const int IF=33;
	public const int INCLUDE=34;
	public const int INCLUDE_STRING=35;
	public const int INC_POST=36;
	public const int INC_PRE=37;
	public const int INTEGER=38;
	public const int Identifier=39;
	public const int Int=40;
	public const int Integer=41;
	public const int LESS=42;
	public const int LESS_OR_EQUAL=43;
	public const int LINE_COMMENT=44;
	public const int ML_COMMENT=45;
	public const int MOD=46;
	public const int MUL=47;
	public const int NOT_EQUAL=48;
	public const int PARAM_LIST=49;
	public const int PARAM_SPEC_LIST=50;
	public const int PROGRAM=51;
	public const int REF=52;
	public const int RETURN=53;
	public const int SHIFT_LEFT=54;
	public const int SHIFT_RIGHT=55;
	public const int SIZEOF_EXPR=56;
	public const int SIZEOF_TYPE=57;
	public const int STATEMENT=58;
	public const int STRING=59;
	public const int STRING_LITERAL=60;
	public const int STRUCT_DEREF=61;
	public const int STRUCT_MEMBER=62;
	public const int SUB=63;
	public const int SUBSCRIPT=64;
	public const int SizeOf=65;
	public const int String=66;
	public const int TRUE=67;
	public const int TYPECAST=68;
	public const int TYPE_SPEC=69;
	public const int U_MINUS=70;
	public const int U_PLUS=71;
	public const int VAR_CALL=72;
	public const int VAR_DECL=73;
	public const int VAR_DEF=74;
	public const int VAR_SPEC=75;
	public const int VOID=76;
	public const int Void=77;
	public const int WHILE=78;
	public const int Whitespace=79;

	public SimpleCParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public SimpleCParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return SimpleCParser.tokenNames; } }
	public override string GrammarFileName { get { return "Grammar\\SimpleC.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_program();
	partial void LeaveRule_program();

	// $ANTLR start "program"
	// Grammar\\SimpleC.g:103:1: public program : ( programStatement )* EOF -> ^( PROGRAM ( programStatement )* ) ;
	[GrammarRule("program")]
	public AstParserRuleReturnScope<CommonTree, CommonToken> program()
	{
		EnterRule_program();
		EnterRule("program", 1);
		TraceIn("program", 1);
		AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		CommonToken EOF2 = default(CommonToken);
		AstParserRuleReturnScope<CommonTree, CommonToken> programStatement1 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

		CommonTree EOF2_tree = default(CommonTree);
		RewriteRuleITokenStream stream_EOF=new RewriteRuleITokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_programStatement=new RewriteRuleSubtreeStream(adaptor,"rule programStatement");
		try { DebugEnterRule(GrammarFileName, "program");
		DebugLocation(103, 0);
		try
		{
			// Grammar\\SimpleC.g:103:8: ( ( programStatement )* EOF -> ^( PROGRAM ( programStatement )* ) )
			DebugEnterAlt(1);
			// Grammar\\SimpleC.g:104:2: ( programStatement )* EOF
			{
			DebugLocation(104, 2);
			// Grammar\\SimpleC.g:104:2: ( programStatement )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_0 = input.LA(1);

				if ((LA1_0==Char||LA1_0==Int||LA1_0==String||LA1_0==Void||LA1_0==81))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// Grammar\\SimpleC.g:104:2: programStatement
					{
					DebugLocation(104, 2);
					PushFollow(Follow._programStatement_in_program1109);
					programStatement1=programStatement();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) stream_programStatement.Add(programStatement1.Tree);

					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }

			DebugLocation(104, 20);
			EOF2=(CommonToken)Match(input,EOF,Follow._EOF_in_program1112); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_EOF.Add(EOF2);



			{
			// AST REWRITE
			// elements: programStatement
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if (state.backtracking == 0) {
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 105:2: -> ^( PROGRAM ( programStatement )* )
			{
				DebugLocation(105, 5);
				// Grammar\\SimpleC.g:105:5: ^( PROGRAM ( programStatement )* )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(105, 7);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(PROGRAM, "PROGRAM"), root_1);

				DebugLocation(105, 15);
				// Grammar\\SimpleC.g:105:15: ( programStatement )*
				while ( stream_programStatement.HasNext )
				{
					DebugLocation(105, 15);
					adaptor.AddChild(root_1, stream_programStatement.NextTree());

				}
				stream_programStatement.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}
			}

			}

			retval.Stop = (CommonToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("program", 1);
			LeaveRule("program", 1);
			LeaveRule_program();
		}
		DebugLocation(106, 0);
		} finally { DebugExitRule(GrammarFileName, "program"); }
		return retval;

	}
	// $ANTLR end "program"

	partial void EnterRule_programStatement();
	partial void LeaveRule_programStatement();

	// $ANTLR start "programStatement"
	// Grammar\\SimpleC.g:108:1: programStatement : ( varDef | funcDecl | funcDef | macroDecl );
	[GrammarRule("programStatement")]
	private AstParserRuleReturnScope<CommonTree, CommonToken> programStatement()
	{
		EnterRule_programStatement();
		EnterRule("programStatement", 2);
		TraceIn("programStatement", 2);
		AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		AstParserRuleReturnScope<CommonTree, CommonToken> varDef3 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> funcDecl4 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> funcDef5 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> macroDecl6 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

		try { DebugEnterRule(GrammarFileName, "programStatement");
		DebugLocation(108, 0);
		try
		{
			// Grammar\\SimpleC.g:108:17: ( varDef | funcDecl | funcDef | macroDecl )
			int alt2=4;
			try { DebugEnterDecision(2, false);
			try
			{
				alt2 = dfa2.Predict(input);
			}
			catch (NoViableAltException nvae)
			{
				DebugRecognitionException(nvae);
				throw;
			}
			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// Grammar\\SimpleC.g:109:2: varDef
				{
				root_0 = (CommonTree)adaptor.Nil();

				DebugLocation(109, 2);
				PushFollow(Follow._varDef_in_programStatement1131);
				varDef3=varDef();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, varDef3.Tree);

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// Grammar\\SimpleC.g:109:11: funcDecl
				{
				root_0 = (CommonTree)adaptor.Nil();

				DebugLocation(109, 11);
				PushFollow(Follow._funcDecl_in_programStatement1135);
				funcDecl4=funcDecl();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, funcDecl4.Tree);

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// Grammar\\SimpleC.g:109:22: funcDef
				{
				root_0 = (CommonTree)adaptor.Nil();

				DebugLocation(109, 22);
				PushFollow(Follow._funcDef_in_programStatement1139);
				funcDef5=funcDef();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, funcDef5.Tree);

				}
				break;
			case 4:
				DebugEnterAlt(4);
				// Grammar\\SimpleC.g:109:32: macroDecl
				{
				root_0 = (CommonTree)adaptor.Nil();

				DebugLocation(109, 32);
				PushFollow(Follow._macroDecl_in_programStatement1143);
				macroDecl6=macroDecl();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, macroDecl6.Tree);

				}
				break;

			}
			retval.Stop = (CommonToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("programStatement", 2);
			LeaveRule("programStatement", 2);
			LeaveRule_programStatement();
		}
		DebugLocation(110, 0);
		} finally { DebugExitRule(GrammarFileName, "programStatement"); }
		return retval;

	}
	// $ANTLR end "programStatement"

	partial void EnterRule_varDef();
	partial void LeaveRule_varDef();

	// $ANTLR start "varDef"
	// Grammar\\SimpleC.g:112:1: varDef : varSpec ';' -> ^( VAR_DEF varSpec ) ;
	[GrammarRule("varDef")]
	private AstParserRuleReturnScope<CommonTree, CommonToken> varDef()
	{
		EnterRule_varDef();
		EnterRule("varDef", 3);
		TraceIn("varDef", 3);
		AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		CommonToken char_literal8 = default(CommonToken);
		AstParserRuleReturnScope<CommonTree, CommonToken> varSpec7 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

		CommonTree char_literal8_tree = default(CommonTree);
		RewriteRuleITokenStream stream_89=new RewriteRuleITokenStream(adaptor,"token 89");
		RewriteRuleSubtreeStream stream_varSpec=new RewriteRuleSubtreeStream(adaptor,"rule varSpec");
		try { DebugEnterRule(GrammarFileName, "varDef");
		DebugLocation(112, 0);
		try
		{
			// Grammar\\SimpleC.g:112:7: ( varSpec ';' -> ^( VAR_DEF varSpec ) )
			DebugEnterAlt(1);
			// Grammar\\SimpleC.g:113:2: varSpec ';'
			{
			DebugLocation(113, 2);
			PushFollow(Follow._varSpec_in_varDef1152);
			varSpec7=varSpec();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) stream_varSpec.Add(varSpec7.Tree);
			DebugLocation(113, 10);
			char_literal8=(CommonToken)Match(input,89,Follow._89_in_varDef1154); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_89.Add(char_literal8);



			{
			// AST REWRITE
			// elements: varSpec
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if (state.backtracking == 0) {
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 114:3: -> ^( VAR_DEF varSpec )
			{
				DebugLocation(114, 6);
				// Grammar\\SimpleC.g:114:6: ^( VAR_DEF varSpec )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(114, 8);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(VAR_DEF, "VAR_DEF"), root_1);

				DebugLocation(114, 16);
				adaptor.AddChild(root_1, stream_varSpec.NextTree());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}
			}

			}

			retval.Stop = (CommonToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("varDef", 3);
			LeaveRule("varDef", 3);
			LeaveRule_varDef();
		}
		DebugLocation(115, 0);
		} finally { DebugExitRule(GrammarFileName, "varDef"); }
		return retval;

	}
	// $ANTLR end "varDef"

	partial void EnterRule_funcDecl();
	partial void LeaveRule_funcDecl();

	// $ANTLR start "funcDecl"
	// Grammar\\SimpleC.g:117:1: funcDecl : typeSpec identifier '(' paramSpecList ')' ';' -> ^( FUNC_DECL typeSpec identifier paramSpecList ) ;
	[GrammarRule("funcDecl")]
	private AstParserRuleReturnScope<CommonTree, CommonToken> funcDecl()
	{
		EnterRule_funcDecl();
		EnterRule("funcDecl", 4);
		TraceIn("funcDecl", 4);
		AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		CommonToken char_literal11 = default(CommonToken);
		CommonToken char_literal13 = default(CommonToken);
		CommonToken char_literal14 = default(CommonToken);
		AstParserRuleReturnScope<CommonTree, CommonToken> typeSpec9 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> identifier10 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> paramSpecList12 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

		CommonTree char_literal11_tree = default(CommonTree);
		CommonTree char_literal13_tree = default(CommonTree);
		CommonTree char_literal14_tree = default(CommonTree);
		RewriteRuleITokenStream stream_82=new RewriteRuleITokenStream(adaptor,"token 82");
		RewriteRuleITokenStream stream_83=new RewriteRuleITokenStream(adaptor,"token 83");
		RewriteRuleITokenStream stream_89=new RewriteRuleITokenStream(adaptor,"token 89");
		RewriteRuleSubtreeStream stream_paramSpecList=new RewriteRuleSubtreeStream(adaptor,"rule paramSpecList");
		RewriteRuleSubtreeStream stream_typeSpec=new RewriteRuleSubtreeStream(adaptor,"rule typeSpec");
		RewriteRuleSubtreeStream stream_identifier=new RewriteRuleSubtreeStream(adaptor,"rule identifier");
		try { DebugEnterRule(GrammarFileName, "funcDecl");
		DebugLocation(117, 0);
		try
		{
			// Grammar\\SimpleC.g:117:9: ( typeSpec identifier '(' paramSpecList ')' ';' -> ^( FUNC_DECL typeSpec identifier paramSpecList ) )
			DebugEnterAlt(1);
			// Grammar\\SimpleC.g:118:2: typeSpec identifier '(' paramSpecList ')' ';'
			{
			DebugLocation(118, 2);
			PushFollow(Follow._typeSpec_in_funcDecl1174);
			typeSpec9=typeSpec();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) stream_typeSpec.Add(typeSpec9.Tree);
			DebugLocation(118, 11);
			PushFollow(Follow._identifier_in_funcDecl1176);
			identifier10=identifier();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) stream_identifier.Add(identifier10.Tree);
			DebugLocation(118, 22);
			char_literal11=(CommonToken)Match(input,82,Follow._82_in_funcDecl1178); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_82.Add(char_literal11);

			DebugLocation(118, 26);
			PushFollow(Follow._paramSpecList_in_funcDecl1180);
			paramSpecList12=paramSpecList();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) stream_paramSpecList.Add(paramSpecList12.Tree);
			DebugLocation(118, 40);
			char_literal13=(CommonToken)Match(input,83,Follow._83_in_funcDecl1182); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_83.Add(char_literal13);

			DebugLocation(118, 43);
			char_literal14=(CommonToken)Match(input,89,Follow._89_in_funcDecl1183); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_89.Add(char_literal14);



			{
			// AST REWRITE
			// elements: identifier, paramSpecList, typeSpec
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if (state.backtracking == 0) {
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 119:3: -> ^( FUNC_DECL typeSpec identifier paramSpecList )
			{
				DebugLocation(119, 6);
				// Grammar\\SimpleC.g:119:6: ^( FUNC_DECL typeSpec identifier paramSpecList )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(119, 8);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(FUNC_DECL, "FUNC_DECL"), root_1);

				DebugLocation(119, 18);
				adaptor.AddChild(root_1, stream_typeSpec.NextTree());
				DebugLocation(119, 27);
				adaptor.AddChild(root_1, stream_identifier.NextTree());
				DebugLocation(119, 38);
				adaptor.AddChild(root_1, stream_paramSpecList.NextTree());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}
			}

			}

			retval.Stop = (CommonToken)input.LT(-1);
